[gd_scene load_steps=5 format=3 uid="uid://x1k2phgovfhc"]

[ext_resource type="Texture2D" uid="uid://bqcwernbyoqpn" path="res://Assets/grid_body.png" id="1_i5bgv"]
[ext_resource type="Script" path="res://Scenes/grid.gd" id="1_wpml7"]
[ext_resource type="PackedScene" uid="uid://cgs7e0m7214lo" path="res://Scenes/mark.tscn" id="2_bc7rl"]
[ext_resource type="Texture2D" uid="uid://b3vitl41bbk4o" path="res://Assets/match_line.png" id="3_gnpsh"]

[node name="Grid" type="Node2D"]
script = ExtResource("1_wpml7")

[node name="grid_body" type="Sprite2D" parent="."]
texture = ExtResource("1_i5bgv")

[node name="Mark_1_1" parent="grid_body" instance=ExtResource("2_bc7rl")]
offset_left = -168.0
offset_top = -160.0
offset_right = -68.0
offset_bottom = -60.0
x = 1
y = 1

[node name="Mark_1_2" parent="grid_body" instance=ExtResource("2_bc7rl")]
offset_left = -40.0
offset_top = -160.0
offset_right = 60.0
offset_bottom = -60.0
x = 1
y = 2

[node name="Mark_1_3" parent="grid_body" instance=ExtResource("2_bc7rl")]
offset_left = 96.0
offset_top = -168.0
offset_right = 196.0
offset_bottom = -68.0
x = 1
y = 3

[node name="Mark_2_1" parent="grid_body" instance=ExtResource("2_bc7rl")]
offset_left = -168.0
offset_top = -40.0
offset_right = -68.0
offset_bottom = 60.0
x = 2
y = 1

[node name="Mark_2_2" parent="grid_body" instance=ExtResource("2_bc7rl")]
offset_left = -40.0
offset_top = -40.0
offset_right = 60.0
offset_bottom = 60.0
x = 2
y = 2

[node name="Mark_2_3" parent="grid_body" instance=ExtResource("2_bc7rl")]
offset_left = 96.0
offset_top = -40.0
offset_right = 196.0
offset_bottom = 60.0
x = 2
y = 3

[node name="Mark_3_1" parent="grid_body" instance=ExtResource("2_bc7rl")]
offset_left = -168.0
offset_top = 80.0
offset_right = -68.0
offset_bottom = 180.0
x = 3
y = 1

[node name="Mark_3_2" parent="grid_body" instance=ExtResource("2_bc7rl")]
offset_left = -40.0
offset_top = 80.0
offset_right = 60.0
offset_bottom = 180.0
x = 3
y = 2

[node name="Mark_3_3" parent="grid_body" instance=ExtResource("2_bc7rl")]
offset_left = 96.0
offset_top = 80.0
offset_right = 196.0
offset_bottom = 180.0
x = 3
y = 3

[node name="match_line" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_gnpsh")
